--- a/qwerty.ipynb
+++ b/qwerty.ipynb
@@ -1168,7 +1168,7 @@
     "\n",
     "figure, axis = plt.subplots(1,3)\n",
     "axis[1].imshow(ideal_lp_filter_img, cmap='gray')\n",
-    "axis[2].imshow(g_lp_filter_img, +cmap='gray')\n",
+    "axis[2].imshow(g_lp_filter_img, cmap='gray')\n",
     "axis[0].imshow(mnist, cmap='gray')"
    ]
   },
